[project]
name = "womensafety-env"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "openenv-core>=0.2.0"
]

#  MUST point to main(), not app
[project.scripts]
server = "server.app:main"

[tool.openenv]
entrypoint = "server.app:main"